# opengl_tutorial

./: .gitignore  README.md
opengl_tutorial/: CMakeLists.txt
opengl_tutorial/include/: camera.hpp  mesh.hpp  model.hpp  shader.hpp
opengl_tutorial/shaders/: 3dcube.vs  simple.vs  skybox.vs  textures.fs  textures.vs  transform.vs
opengl_tutorial/src/: camera.cpp  hello_camera.cpp  hello_coordsystem.cpp  hello_model.cpp  hello_skybox.cpp  hello_textures.cpp  hello_transformations.cpp  hello_triangle.cpp  hello_window.cpp  mesh.cpp  model.cpp  shader.cpp  shader_test.cpp  test.cpp
